log
Thu Apr 30 08:11:42 PM UTC 2026: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:52:5: error: expected ‘;’ before ‘map’
   52 |     map->lower_than = lower_than;
      |     ^~~
eae8fbc
Thu Apr 30 08:11:58 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:52:5: error: ‘map’ undeclared (first use in this function); did you mean ‘mapa’?
   52 |     map->lower_than = lower_than;
      |     ^~~
      |     mapa
treemap.c:52:5: note: each undeclared identifier is reported only once for each function it appears in
4cdbf41
